Fixed issues related to SonarCloud